feat: create reviews pages + orders menu

--- a/add_blog_post.html
+++ b/add_blog_post.html
@@ -328,7 +328,7 @@
         </div>
     </div>
 </header>
-<main class="add_look_book">
+<main class="add_blog_post">
     <section class="section_1">
         <div class="container-fluid">
             <div class="row">
@@ -342,121 +342,23 @@
                                         <span>Back to my account</span>
                                     </a>
                                     <div class="form-group name_block">
-                                        <h3>GIVE YOUR LOOK BOOK A NAME</h3>
+                                        <h3>GIVE YOUR BLOG POST A TITLE</h3>
                                         <input type="text" name="name" id="name"/>
-                                        <div class="upload_block">
-                                            <input type="file" name="photo" id="look_book_file">
-                                            <label for="look_book_file">Upload Look Book</label>
-                                            <span>PDF / WORD</span>
-                                        </div>
                                     </div>
                                     <div class="form-group description_block">
-                                        <h3>ENTER A DESCRIPTION FOR YOUR LOOK BOOK (300
-                                            characters)</h3>
+                                        <h3>WRITE YOUR BLOG POST</h3>
                                         <textarea name="description" id="description"></textarea>
                                     </div>
-                                    <div class="form-group gender_block">
-                                        <h3>GENDER</h3>
-                                        <ul class="list-unstyled">
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="genre_item_1" type="checkbox">
-                                                    <label for="genre_item_1">Women</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="genre_item_2" type="checkbox">
-                                                    <label for="genre_item_2">Men</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="genre_item_3" type="checkbox">
-                                                    <label for="genre_item_3">Kids</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="genre_item_4" type="checkbox">
-                                                    <label for="genre_item_4">All</label>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="form-group category_block">
-                                        <h3>CATEGORY</h3>
-                                        <ul class="list-unstyled">
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="product_item_1" type="checkbox">
-                                                    <label for="product_item_1">Coat's & Jackets</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="product_item_2" type="checkbox">
-                                                    <label for="product_item_2">Dresses</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="product_item_3" type="checkbox">
-                                                    <label for="product_item_3">Jeans</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="product_item_4" type="checkbox">
-                                                    <label for="product_item_4">Jumpsuits</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="product_item_10" type="checkbox">
-                                                    <label for="product_item_10">Shirts & Blouses</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="product_item_9" type="checkbox">
-                                                    <label for="product_item_9">Tops & T-Shirts</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="product_item_5" type="checkbox">
-                                                    <label for="product_item_5">Trousers & Leggings</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="product_item_6" type="checkbox">
-                                                    <label for="product_item_6">Shorts & Skirts</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="filter" id="product_item_7" type="checkbox">
-                                                    <label for="product_item_7">Lingerie & Nightware</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="checkbox">
-                                                    <input name="remember" id="product_item_8" type="checkbox">
-                                                    <label for="product_item_8">Shoes</label>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                        <div class="input_block">
-                                            <label for="category">Don't See it listed? Enter the category below</label>
-                                            <input type="text" name="brand" id="category">
+                                    <div class="form-group file_block">
+                                        <h3>UPLOAD A PHOTO FOR YOUR BLOG POST (minimum size 504 x 504 px)</h3>
+                                        <div class="file_input">
+                                            <label title="Upload photo" for="blog_photo"><i></i></label>
+                                            <input type="file" name="blog_photo" id="blog_photo">
                                         </div>
                                     </div>
                                     <div class="buttons_block">
                                         <a href="owner_boutique_page_empty.html" class="btn_pusblish">Publish</a>
-                                        <a href="add_look_book.html" class="btn_add_publish">Publish & Add Another
-                                            Look Book</a>
+                                        <a href="add_blog_post.html" class="btn_add_publish">Publish & Add Another Blog Post</a>
                                     </div>
                                 </div>
                             </div>
