--- a/owner_boutique_page_empty.html
+++ b/owner_boutique_page_empty.html
@@ -277,8 +277,8 @@
                         <li>
                             <div class="icon"></div>
                         </li>
-                        <li class="active"><a href="#"><i class="boutique"></i><span>Boutique</span></a></li>
-                        <li><a href="#"><i class="orders"></i><span>Orders</span></a></li>
+                        <li class="active"><a href="owner_boutique_page_empty.html"><i class="boutique"></i><span>Boutique</span></a></li>
+                        <li><a href="owner_boutique_page_orders.html"><i class="orders"></i><span>Orders</span></a></li>
                         <li><a href="#"><i class="messages"></i><span>Messages</span></a></li>
                         <li><a href="#"><i class="settings"></i><span>Settings</span></a></li>
                     </ul>
@@ -636,8 +636,181 @@
                         <div role="tabpanel" class="tab-pane" id="review_tab">
                             <h4>Read and respond to review from buyers</h4>
                             <div class="row">
-                                <div class="item empty col-md-3 col-sm-4 col-xs-6">
-                                    <div class="add_item"></div>
+                                <div class="item col-xs-12">
+                                    <div class="person_item">
+                                        <div class="person_name_block">
+                                            <div class="name">Person Name</div>
+                                            <div class="review_block">
+                                                <span class="glyphicon glyphicon-star active"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                            </div>
+                                        </div>
+                                        <div class="person_desc">
+                                            <p>
+                                                Lorem ipsum dolor sit amet, quem probo vim eu. Et pri vidisse virtute
+                                                facilis, modus harum cu mel. Ferri referrentur duo ut, cu nulla referrentur
+                                                pro, mea in iudico petentium vituperatoribus. Constituto voluptatum
+                                                referrentur ex nam, est eu reque virtute efficiantur, dolore alterum per at.
+                                                Mel in mentitum luptatum, usu ad elitr praesent moderatius. Eos ei saperet
+                                                expetenda, at falli simul tempor vis, vim modo rationibus cu. Aliquid
+                                                omittantur id pro, ea autem posse decore vix, idque scripta feugiat te mea.
+                                                Pri ad aliquid aliquando, qui et brute putant adolescens.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="reply_block">
+                                        <textarea name="reply_text_1" placeholder="Reply to this review"></textarea>
+                                        <div class="owner_item">
+                                            <div class="owner_name_block">
+                                                <div class="name">Your reply</div>
+                                            </div>
+                                            <div class="owner_desc">
+                                                <p>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item_actions">
+                                        <div class="btn-group" role="group" aria-label="">
+                                            <a class="btn_reply"><i></i><span>Reply</span></a>
+                                            <a href="#" class="btn_flag"><i></i><span>Flag</span></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item col-xs-12">
+                                    <div class="person_item">
+                                        <div class="person_name_block">
+                                            <div class="name">Person Name</div>
+                                            <div class="review_block">
+                                                <span class="glyphicon glyphicon-star active"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                            </div>
+                                        </div>
+                                        <div class="person_desc">
+                                            <p>
+                                                Lorem ipsum dolor sit amet, quem probo vim eu. Et pri vidisse virtute
+                                                facilis, modus harum cu mel. Ferri referrentur duo ut, cu nulla referrentur
+                                                pro, mea in iudico petentium vituperatoribus. Constituto voluptatum
+                                                referrentur ex nam, est eu reque virtute efficiantur, dolore alterum per at.
+                                                Mel in mentitum luptatum, usu ad elitr praesent moderatius. Eos ei saperet
+                                                expetenda, at falli simul tempor vis, vim modo rationibus cu. Aliquid
+                                                omittantur id pro, ea autem posse decore vix, idque scripta feugiat te mea.
+                                                Pri ad aliquid aliquando, qui et brute putant adolescens.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="reply_block">
+                                        <textarea name="reply_text_1" placeholder="Reply to this review"></textarea>
+                                        <div class="owner_item">
+                                            <div class="owner_name_block">
+                                                <div class="name">Your reply</div>
+                                            </div>
+                                            <div class="owner_desc">
+                                                <p>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item_actions">
+                                        <div class="btn-group" role="group" aria-label="">
+                                            <a class="btn_reply"><i></i><span>Reply</span></a>
+                                            <a href="#" class="btn_flag"><i></i><span>Flag</span></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item col-xs-12">
+                                    <div class="person_item">
+                                        <div class="person_name_block">
+                                            <div class="name">Person Name</div>
+                                            <div class="review_block">
+                                                <span class="glyphicon glyphicon-star active"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                            </div>
+                                        </div>
+                                        <div class="person_desc">
+                                            <p>
+                                                Lorem ipsum dolor sit amet, quem probo vim eu. Et pri vidisse virtute
+                                                facilis, modus harum cu mel. Ferri referrentur duo ut, cu nulla referrentur
+                                                pro, mea in iudico petentium vituperatoribus. Constituto voluptatum
+                                                referrentur ex nam, est eu reque virtute efficiantur, dolore alterum per at.
+                                                Mel in mentitum luptatum, usu ad elitr praesent moderatius. Eos ei saperet
+                                                expetenda, at falli simul tempor vis, vim modo rationibus cu. Aliquid
+                                                omittantur id pro, ea autem posse decore vix, idque scripta feugiat te mea.
+                                                Pri ad aliquid aliquando, qui et brute putant adolescens.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="reply_block">
+                                        <textarea name="reply_text_1" placeholder="Reply to this review"></textarea>
+                                        <div class="owner_item">
+                                            <div class="owner_name_block">
+                                                <div class="name">Your reply</div>
+                                            </div>
+                                            <div class="owner_desc">
+                                                <p>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item_actions">
+                                        <div class="btn-group" role="group" aria-label="">
+                                            <a class="btn_reply"><i></i><span>Reply</span></a>
+                                            <a href="#" class="btn_flag"><i></i><span>Flag</span></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item col-xs-12">
+                                    <div class="person_item">
+                                        <div class="person_name_block">
+                                            <div class="name">Person Name</div>
+                                            <div class="review_block">
+                                                <span class="glyphicon glyphicon-star active"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                                <span class="glyphicon glyphicon-star"></span>
+                                            </div>
+                                        </div>
+                                        <div class="person_desc">
+                                            <p>
+                                                Lorem ipsum dolor sit amet, quem probo vim eu. Et pri vidisse virtute
+                                                facilis, modus harum cu mel. Ferri referrentur duo ut, cu nulla referrentur
+                                                pro, mea in iudico petentium vituperatoribus. Constituto voluptatum
+                                                referrentur ex nam, est eu reque virtute efficiantur, dolore alterum per at.
+                                                Mel in mentitum luptatum, usu ad elitr praesent moderatius. Eos ei saperet
+                                                expetenda, at falli simul tempor vis, vim modo rationibus cu. Aliquid
+                                                omittantur id pro, ea autem posse decore vix, idque scripta feugiat te mea.
+                                                Pri ad aliquid aliquando, qui et brute putant adolescens.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="reply_block">
+                                        <textarea name="reply_text_1" placeholder="Reply to this review"></textarea>
+                                        <div class="owner_item">
+                                            <div class="owner_name_block">
+                                                <div class="name">Your reply</div>
+                                            </div>
+                                            <div class="owner_desc">
+                                                <p>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item_actions">
+                                        <div class="btn-group" role="group" aria-label="">
+                                            <a class="btn_reply"><i></i><span>Reply</span></a>
+                                            <a href="#" class="btn_flag"><i></i><span>Flag</span></a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
