feat: settings menu

--- a/owner_boutique_page_empty.html
+++ b/owner_boutique_page_empty.html
@@ -280,7 +280,7 @@
                         <li class="active"><a href="owner_boutique_page_empty.html"><i class="boutique"></i><span>Boutique</span></a></li>
                         <li><a href="owner_boutique_page_orders.html"><i class="orders"></i><span>Orders</span></a></li>
                         <li><a href="#"><i class="messages"></i><span>Messages</span></a></li>
-                        <li><a href="#"><i class="settings"></i><span>Settings</span></a></li>
+                        <li><a href="owner_boutique_page_settings.html"><i class="settings"></i><span>Settings</span></a></li>
                     </ul>
                 </div>
             </div>
