--- a/checkout_step_1.html
+++ b/checkout_step_1.html
@@ -405,11 +405,31 @@
                                             </fieldset>
                                             <fieldset class="field">
                                                 <legend>Country</legend>
-                                                <select name="country" id="checkout_select_step_1">
-                                                    <option value="1">Moldova</option>
-                                                    <option value="2" selected>United States of America</option>
-                                                    <option value="3">United Arab Emirates</option>
-                                                </select>
+                                                <div class="ui selection dropdown country_dropdown"
+                                                     id="country_dropdown_step_1">
+                                                    <i class="dropdown icon"></i>
+                                                    <input type="hidden" name="country" id="country">
+                                                    <div class="default text">
+                                                        United States of America
+                                                    </div>
+                                                    <div class="menu">
+                                                        <div class="item active selected" data-value="1">
+                                                            <span>United States of America</span>
+                                                        </div>
+                                                        <div class="item" data-value="2">
+                                                            <span>Moldova</span>
+                                                        </div>
+                                                        <div class="item" data-value="2">
+                                                            <span>United Arab Emirates</span>
+                                                        </div>
+                                                        <div class="item" data-value="2">
+                                                            <span>Russia</span>
+                                                        </div>
+                                                        <div class="item" data-value="2">
+                                                            <span>Saint Vincent and the Grenadines</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </fieldset>
                                             <a href="checkout_step_2.html" class="btn_step">Continue</a>
                                         </fieldset>
