--- a/look_book_page.html
+++ b/look_book_page.html
@@ -125,7 +125,7 @@
             </div>
             <div class="form-group date_block">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Data of Birth" name="birthdate">
+                    <input type="text" readonly class="form-control" id="register_date_birth"  placeholder="Date of Birth" name="birthdate">
                     <div class="input-group-addon"><i class="date_icon"></i></div>
                 </div>
             </div>
