--- a/view_product.html
+++ b/view_product.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Supply Apparel | Product View </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -124,7 +125,7 @@
             </div>
             <div class="form-group date_block">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Data of Birth" name="birthdate">
+                    <input type="text" readonly class="form-control" id="register_date_birth"  placeholder="Date of Birth" name="birthdate">
                     <div class="input-group-addon"><i class="date_icon"></i></div>
                 </div>
             </div>
@@ -479,7 +480,8 @@
                 </div>
                 <div class="cart_footer">
                     <a href="#" class="back">
-                        Continue Shopping
+                        <i class="fa fa-angle-left"></i>
+                        <span>Continue Shopping</span>
                     </a>
                     <a href="checkout_step_1.html" class="btn_checkout">Checkout</a>
                 </div>
