fix: bug fixing

--- a/contact_us_success.html
+++ b/contact_us_success.html
@@ -333,7 +333,7 @@
                         <div class="contact_block">
                             <div class="contact_header">
                                 <div class="title">Contact Us</div>
-                                <div class="close_button"><span></span></div>
+                                <a href="owner_boutique_page_empty.html" class="close_button"><span></span></a>
                             </div>
                             <div class="confirmation_block">
                                 <div class="icon"><span></span></div>
