--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                                         products to millions
                                         around the world.
                                     </p>
-                                    <a href="#" class="btn_start_now">Start now</a>
+                                    <a href="owner_page_index.html" class="btn_start_now">Start now</a>
                                 </div>
                             </div>
                         </div>
@@ -977,7 +977,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <a href="mens_page.html" class="btn_show_more">Show More</a>
+                        <a href="mens_item.html" class="btn_show_more">Show More</a>
                     </div>
                 </div>
             </div>
@@ -1563,7 +1563,7 @@
             <div class="col-sm-2 col-xs-4 menu_quick_links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">My Account</a></li>
+                    <li><a href="owner_boutique_page_empty.html">My Account</a></li>
                     <li><a href="#">Size Guide</a></li>
                     <li><a href="#">Terms & Conditions</a></li>
                     <li><a href="#">Returns & Exchanges</a></li>
@@ -1572,18 +1572,18 @@
             <div class="col-sm-2  col-xs-4 menu_browsing">
                 <h3>Browsing Menu</h3>
                 <ul>
-                    <li><a href="#">Women</a></li>
-                    <li><a href="#">Men</a></li>
-                    <li><a href="#">Kids</a></li>
-                    <li><a href="#">Boutiques</a></li>
-                    <li><a href="#">Look Books</a></li>
+                    <li><a href="women_items.html">Women</a></li>
+                    <li><a href="mens_item.html">Men</a></li>
+                    <li><a href="kids_items.html">Kids</a></li>
+                    <li><a href="boutiques_items.html">Boutiques</a></li>
+                    <li><a href="look_book_items.html">Look Books</a></li>
                 </ul>
             </div>
             <div class="col-sm-2 col-xs-4 menu_help">
                 <h3>Help</h3>
                 <ul>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Track Orders</a></li>
+                    <li><a href="contact_us.html">Contact Us</a></li>
+                    <li><a href="owner_boutique_page_orders.html">Track Orders</a></li>
                     <li><a href="#">FAQ's</a></li>
                     <li><a href="#">Shipping & Delivery</a></li>
                     <li><a href="#">Privacy Policy</a></li>
