--- a/owner_page_index_no_created_boutique.html
+++ b/owner_page_index_no_created_boutique.html
@@ -523,7 +523,7 @@
                                     <i class="icon"></i>
                                     <span>Apparel on models with natural background</span>
                                 </div>
-                                <div class="item_body"></div>
+                                <div class="item_body p1"></div>
                             </div>
                         </div>
                         <div class="col-md-4  col-sm-6 item">
@@ -532,7 +532,7 @@
                                     <i class="icon"></i>
                                     <span>Apparel on models with studio background</span>
                                 </div>
-                                <div class="item_body"></div>
+                                <div class="item_body p2"></div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 item">
@@ -541,7 +541,7 @@
                                     <i class="icon"></i>
                                     <span>Apparel on models with studio background</span>
                                 </div>
-                                <div class="item_body"></div>
+                                <div class="item_body p3"></div>
                             </div>
                         </div>
                     </div>
@@ -565,7 +565,7 @@
             <div class="col-sm-2 col-xs-4 menu_quick_links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">My Account</a></li>
+                    <li><a href="owner_boutique_page_empty.html">My Account</a></li>
                     <li><a href="#">Size Guide</a></li>
                     <li><a href="#">Terms & Conditions</a></li>
                     <li><a href="#">Returns & Exchanges</a></li>
@@ -574,18 +574,18 @@
             <div class="col-sm-2  col-xs-4 menu_browsing">
                 <h3>Browsing Menu</h3>
                 <ul>
-                    <li><a href="#">Women</a></li>
-                    <li><a href="#">Men</a></li>
-                    <li><a href="#">Kids</a></li>
-                    <li><a href="#">Boutiques</a></li>
-                    <li><a href="#">Look Books</a></li>
+                    <li><a href="women_items.html">Women</a></li>
+                    <li><a href="mens_item.html">Men</a></li>
+                    <li><a href="kids_items.html">Kids</a></li>
+                    <li><a href="boutiques_items.html">Boutiques</a></li>
+                    <li><a href="look_book_items.html">Look Books</a></li>
                 </ul>
             </div>
             <div class="col-sm-2 col-xs-4 menu_help">
                 <h3>Help</h3>
                 <ul>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Track Orders</a></li>
+                    <li><a href="contact_us.html">Contact Us</a></li>
+                    <li><a href="owner_boutique_page_orders.html">Track Orders</a></li>
                     <li><a href="#">FAQ's</a></li>
                     <li><a href="#">Shipping & Delivery</a></li>
                     <li><a href="#">Privacy Policy</a></li>
